@@ -1,4 +1,5 @@
 [GlassPlayerHost]
+SystemName=GlassPlayer
 AudioDevice=ALSA
 AlsaDevice=hw:0
 StreamUrl=
